--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -10827,3 +10827,17 @@ legend.scheduler-border {
 .jss_container {
   width: 100%;
 }
+.DataentryTable .jss > thead > tr > td:nth-child(2) {
+  width: 200px !important;
+  left: 0 !important;
+  z-index: 4 !important;
+  position: sticky !important;
+}
+.DataentryTable .jss > tbody > tr > td:nth-child(2) {
+  width: 200px !important;
+  left: 0 !important;
+  z-index: 2 !important;
+  position: sticky !important;
+  // background: #fff;
+
+}
