commited by anisha

--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -522,7 +522,7 @@ label.arrow_label:after {
 
 // radio button
 .form-check {
-  padding-left: 1.25rem !important;
+  padding-left: 1.25rem;
 }
 
 // table dropdown footer
