Added validation in ERP Linking popup

--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -10827,3 +10827,6 @@ legend.scheduler-border {
 .jss_container {
   width: 100%;
 }
+.errorBorder > div > div > fieldset {
+  border-color: #BA0C2F;
+}
