--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -2522,6 +2522,10 @@ input::placeholder {
   transform: translateX(-63%) scale(1);
 }
 
+.progressbartext4Import {
+  left: 48%;
+  transform: translateX(-38%) scale(1);
+}
 
 @media only screen and (max-width: 1024px) {
   // .progressbartext1 {
