commited by anisha

--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -10281,7 +10281,7 @@ legend.scheduler-border {
   left: 90px !important;
   z-index: 3 !important;
   position: sticky !important;
-  background: #fff;
+  background: #fff!important;
 }
 
 
