--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -11029,7 +11029,7 @@ label.arrow_label:before {
   width: 120px;
   min-width: 120px;
   z-index: 2 !important;
-  background: #fff;
+  background: #fff!important;
 
 }
 
