--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -10882,3 +10882,10 @@ legend.scheduler-border {
   white-space: pre !important;
   text-align: center !important;
 }
+
+.compareAndSelectPlanningUnitTable .table thead tr th {
+  position: sticky;
+  top: -1px;
+  padding: 6px 10px 5px 10px !important;
+  background: #fff;
+}
