--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -10889,3 +10889,14 @@ legend.scheduler-border {
   padding: 6px 10px 5px 10px !important;
   background: #fff;
 }
+.fixTableHeadCompareandselect{
+  max-height: calc(100vh - 300px) !important;
+  overflow-y: scroll;
+  overflow-x: hidden;
+}
+.compareAndSelectPlanningUnitTableTdWidth {
+  overflow: hidden !important;
+  min-width: 162px !important;
+  word-wrap: break-word !important;
+  z-index: 1;
+}
