changes for bul extrapolation

--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -10858,3 +10858,9 @@ legend.scheduler-border {
   justify-content: flex-end;
   align-items: center;
 }
+.supplyplanformulasRed {
+  // color: #20a8d8 !important;
+  color: #e5133c !important;
+  font-size: 12px !important;
+  font-weight: bold !important;
+}
