--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -4,18 +4,21 @@
   --font-color: #212721;
   --background-color: #e4e5e6;
   --link-color: cornflowerblue;
+  // font-size: 14px !important;
 }
 
 [data-theme="dark"] {
   // --font-color: #e4e5e6;
   --background-color: #1d222b;
   --link-color: lightblue;
+  // font-size: 14px !important;
 }
 
 
 body {
   background-color: var(--background-color);
   color: var(--font-color);
+  font-size: 14px !important;
 }
 
 /* Dark Mode */
@@ -155,6 +158,7 @@ body {
   background-color: #212631;
   background-clip: padding-box;
   border: 1px solid #2a303d;
+  color: #e4e5e6;
 }
 .jss_pagination > div > div {
   text-align: center;
@@ -189,7 +193,7 @@ body {
   // border-color: #2a303d #2a303d #2a303d;
 }
 .jss_content .jss tbody tr:nth-of-type(odd) {
-  background-color: #212631;
+  background-color: #212631!important;
   color: #e4e5e6;
 }
 .jss_content .jss tbody tr:nth-of-type(even) {
@@ -250,7 +254,304 @@ select>.Select-control .Select-value,
 }
 .form-control{
   background-color: #212631;
+  color: #e4e5e6;
 }
+.Login-component .input-group > .form-control{
+  background-color: #fff;
+  color: #000;
+}
+@media (min-width: 992px) {
+  .module2.sidebar .nav > .nav-dropdown > .nav-dropdown-items {
+      background: #212631 !important;
+  }
+}
+.form-check-inline .form-check-input {
+  margin-top: -8px;
+}
+h4, .h4 {
+  color:#e4e5e6;
+}
+.Select--multi .Select-value {
+  color: #e4e5e6 !important;
+  font-size: 12px !important;
+  margin-top: 3px !important;
+  background-color: #212631;
+}
+.Select-control{
+  background-color: #212631;
+  color: #e4e5e6;
+}
+.form-control:focus {
+  color: #e4e5e6;
+  background-color: #212631;
+}
+.rst__rowContents{
+  background-color: #212631;
+  border: 1px solid #2a303d;
+}
+.supplyplanformulas {
+  color: #e4e5e6 !important;
+  font-size: 12px !important;
+  font-weight: bold !important;
+}
+.jss_filters {
+  background: #212631;
+  color: #e4e5e6;
+ 
+}
+.jss_filters_search{
+  background-color: #212631;
+  color: #e4e5e6;
+}
+.Select.is-disabled > .Select-control {
+  background-color: #212631 !important;
+}
+.rmsc .dropdown-container{
+  background-color:#212631 ;
+}
+.jss > thead > tr > .InfoTr::after {
+  color: #e4e5e6;
+}
+.compareAndSelect-larrow {
+  color: #e4e5e6;
+}
+.tree_label {
+  position: relative;
+  display: inline-block;
+  background: transparent;
+}
+label.arrow_label:before {
+  color: #e4e5e6;
+  position: relative;
+  z-index: 1;
+  float: left;
+  margin: 0 1em 0 -2em;
+  width: 1em;
+  height: 1em;
+  border-radius: 1em;
+  content: "\f150";
+  text-align: center;
+  line-height: 0.9em;
+}
+.legendcommitversion .blacklegend {
+  background-color: #000;
+  border: 1px solid #e4e5e6 !important;
+}
+.progressbar {
+  color: #e4e5e6;
+}
+.custom-file-label {
+  color: #e4e5e6;
+  background-color: #212631;
+  border: 1px solid #2a303d;
+  border-radius: 0.25rem;
+}
+.StepCardFooter {
+  margin-bottom: -1.25rem;
+  margin-left: -1.25rem;
+  margin-right: -1.25rem;
+  padding: 10px 20px;
+  background-color: #212631;
+  border-top: 1px solid #2a303d;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+.Select.is-focused>.Select-control{
+  background-color: #212631!important;
+  color: #e4e5e6;
+}
+.month-picker > .rmp-container .rmp-popup.light {
+  color: #666;
+  background-color: #212631;
+}
+@media screen and (min-width: 768px) {
+  .month-picker > .rmp-container .rmp-popup .rmp-pad {
+      background: #212631 !important;
+      width: 17rem !important;
+  }
+}
+.DataEntryTable .table thead tr th {
+  position: sticky;
+  top: -1px;
+  padding: 6px 20px 5px 20px !important;
+  background: #212631;
+  color: #e4e5e6;
+
+}
+.BorderNoneSupplyPlan {
+  border: none !important;
+  background: #212631 !important;
+}
+.first-col {
+  visibility: visible;
+  background: #212631;
+  color: #e4e5e6;
+}
+.table-bordered th, .table-bordered td {
+  border: 1px solid #2a303d;
+  // color: #e4e5e6;
+}
+.table {
+  color: #e4e5e6 !important;
+}
+.compareAndSelect-rarrow {
+  float: right;
+  color: #e4e5e6;
+  font-size: 13px;
+  margin-top: 2px;
+}
+.leftAlignTable1 .jss_overflow > tbody > tr > td:nth-child(3) {
+  position: sticky;
+  left: 0;
+  width: 120px;
+  min-width: 120px;
+  z-index: 2 !important;
+  background: #212631;
+}
+.leftAlignTable1 .jss_overflow > tbody > tr > td:nth-child(4) {
+  position: sticky;
+  left: 110px;
+  width: 120px;
+  min-width: 120px;
+  z-index: 3 !important;
+  background: #212631;
+}
+.jdropdown-item {
+  white-space: nowrap;
+  text-align: left;
+  text-overflow: ellipsis;
+  overflow-x: hidden;
+  color: #e4e5e6;
+  display: flex;
+  align-items: center;
+}
+.jdropdown-default .jdropdown-content {
+  min-width: inherit;
+  border: 1px solid #2a303d;
+  margin: 0px;
+  background-color: #212631;
+  box-sizing: border-box;
+  min-height: 10px;
+  max-height: 215px;
+  overflow-y: auto;
+}
+.jss>tbody>tr>td.jss_dropdown[title]{
+  background-color: #212631;
+}
+.legendcommitversionText {
+  text-align: left;
+  display: table;
+  padding: 0px 0px 0px 11px;
+  color: #e4e5e6;
+}
+.legendcommitversion .greenlegend {
+  background-color: #86cd99;
+  border-color: 1px solid #86cd99;
+  color: #e4e5e6;
+}
+.fa-info-circle:before {
+  content: "\f05a";
+  color: #e4e5e6;
+}
+.compareAndSelect-larrowText {
+  float: left;
+  font-size: 13px;
+  color: #e4e5e6;
+}
+.compareAndSelect-rarrowText {
+  float: right;
+  font-size: 13px;
+  color: #e4e5e6;
+}
+.TreeIconStyle i {
+  font-size: 14px;
+  cursor: pointer;
+  font-weight: 500;
+  color: #e4e5e6;
+}
+.TreeIconStyle i:hover {
+  /* font-size: 14px !important; */
+  cursor: pointer;
+  color: #f5f5f5;
+  box-shadow: 0 8px 16px #0000001f !important;
+}
+.modal-content{
+  background-color: #23282c;
+}
+.AggregationNodeSize {
+  width: 13px;
+  height: 13px;
+  color: #e4e5e6;
+}
+.collapse-bg {
+  background-color: #23282c;
+  border: 1px solid #eee;
+}
+.DarkThColr{
+  color: #e4e5e6;
+}
+legend.scheduler-border {
+  color: #e4e5e6;
+}
+.cui-arrow-left:before {
+  content: "\e907";
+  color: #e4e5e6;
+}
+.cui-arrow-right:before {
+  content: "\e908";
+  color: #e4e5e6;
+}
+.Select.has-value.Select--single>.Select-control .Select-value .Select-value-label, .Select.has-value.is-pseudo-focused.Select--single>.Select-control .Select-value .Select-value-label {
+  color: #e4e5e6;
+}
+.ProblemListDashboardBorder .table th, .table td {
+  padding: 0.75rem;
+  vertical-align: top;
+   border-top: 0px solid transparent !important; 
+}
+.ProblemListDashboardBorder .table th, .table td {
+  padding: 0.75rem;
+  vertical-align: top;
+  border-top: 0px solid transparent !important;
+}
+.jss > thead > tr > .InfoTrAsteriskTheadtrTd::after {
+  color: #e4e5e6;
+}
+body{
+  background-color: #1d222b;
+  font-size: 0.775rem !important;
+}
+.rmsc {
+  --rmsc-h: 27px !important;
+  --rmsc-main: #8ad4ee !important;
+  --rmsc-hover: #f1f3f5;
+  --rmsc-selected: #2a303d!important;
+  --rmsc-border: #e4e7ea !important;
+  --rmsc-gray: #697069 !important;
+  --rmsc-bg: #212631!important;
+  --rmsc-p: 10px;
+  --rmsc-radius: 0.2rem !important;
+  color: #e4e5e6 !important;
+}
+.svgdropdown .rmsc .gray {
+  color: #e4e5e6;
+  width: 22px;
+  height: 30px;
+  transform: scale(0.73);
+  margin: 6px -11px 0px 2px;
+}
+.jss > tbody > tr > td.productValidationSubTotalClass {
+  background-color: #ccc !important;
+  font-weight: bold !important;
+  color: #000;
+}
+.month-picker label{
+  color:#000 !important;
+}
+// .TableColorL td{
+//   color: #000;
+// }
 }
 /*Dark mode end*/
 
