commited by anisha

--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -687,7 +687,7 @@ select>.Select-control .Select-value,
   /* color: #fff; */
   margin-bottom: -1px;
   background-color: #23282c;
-  border: 1px solid #ddd;
+  border: 1px solid #2a303d;
 }
 // .hoverTd {
 //   background-color: #e5e5e5;
