--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -138,7 +138,7 @@ body {
   white-space: nowrap;
   empty-cells: show;
   border: 0;
-  background-color: #fff;
+  background-color: transparent;
   width: 0;
   outline: 0;
   border-top: 0;
@@ -211,10 +211,14 @@ body {
   min-height: 23px;
   text-align: center;
   white-space: pre;
+  // color: #000;
 }
 .form-control:disabled, .form-control[readonly] {
-  background-color: #212631;
-  opacity: 1;
+  // background-color: #212631;
+  // opacity: 1;
+  background-color: #e5edf5;
+    opacity: 1;
+    color: #000!important;
 }
 .titleColorModule2 {
   color: #e4e5e6 !important;
@@ -411,7 +415,7 @@ label.arrow_label:before {
   width: 120px;
   min-width: 120px;
   z-index: 2 !important;
-  background: #212631;
+  background: #212631!important;
 }
 .leftAlignTable1 .jss_overflow > tbody > tr > td:nth-child(4) {
   position: sticky;
@@ -419,7 +423,7 @@ label.arrow_label:before {
   width: 120px;
   min-width: 120px;
   z-index: 3 !important;
-  background: #212631;
+  background: #212631!important;
 }
 .jdropdown-item {
   white-space: nowrap;
@@ -522,10 +526,13 @@ legend.scheduler-border {
 .jss > thead > tr > .InfoTrAsteriskTheadtrTd::after {
   color: #e4e5e6;
 }
-// body{
-//   background-color: #1d222b;
-//   font-size: 0.775rem !important;
-// }
+body{
+  background-color: #1d222b;
+  // font-size: 0.775rem !important;
+}
+.HelpdeskQATbg{
+  background-color: #1d222b!important;
+}
 .rmsc {
   --rmsc-h: 27px !important;
   --rmsc-main: #8ad4ee !important;
@@ -599,6 +606,9 @@ select>.Select-control .Select-value,
 .Select-placeholder {
   color: #e4e5e6 !important;
 }
+.input-group input::placeholder{
+  color: #7a7e7a !important;
+}
 .rst__rowTitle {
   font-weight: bold;
   color: #e4e5e6;
@@ -653,6 +663,11 @@ select>.Select-control .Select-value,
 .CleanUpIcon {
   border: 2px solid #e4e5e6;
   border-radius: 3px;
+  filter: invert(1) brightness(2);
+}
+.fa-trash:before {
+  content: "\f1f8";
+  color: #e4e5e6;
 }
 .form-control-file, .form-control-range {
   display: block;
@@ -660,8 +675,13 @@ select>.Select-control .Select-value,
   color: #e4e5e6;
 }
 .jss > tbody > tr > td.readonly {
-  color: #000 !important;
+  color: #000;
 }
+.jexcelremoveReadonlybackground .jss_content tr .readonly {
+  color: #e4e5e6 !important;
+  background: transparent !important;
+}
+
 .table td span{
   padding: 0.75rem;
   vertical-align: top;
@@ -688,6 +708,154 @@ select>.Select-control .Select-value,
   margin-bottom: -1px;
   background-color: #23282c;
   border: 1px solid #2a303d;
+}
+.bg-white {
+  background-color: #23282c !important;
+}
+.react-bootstrap-table-pagination-total {
+  font-size: 12px;
+  color: #e4e5e6;
+}
+.fixTableHead {
+  max-height: calc(100vh - 300px) !important;
+  overflow: scroll;
+  border-top: 1px solid #2a303d;
+}
+.table-striped tbody tr:nth-of-type(odd) {
+  background-color: #23282c;
+}
+.ant-picker-input > input {
+  position: relative;
+  display: inline-block;
+  width: 100%;
+  min-width: 0;
+  padding: 4px 11px;
+  color: #e4e5e6;
+  font-size: 14px;
+  line-height: 1.5715;
+  background-color: #fff;
+  background-image: none;
+  border: 1px solid #d9d9d9;
+  border-radius: 2px;
+  transition: all 0.3s;
+  flex: auto;
+  min-width: 1px;
+  height: auto;
+  padding: 0;
+  background: transparent;
+  border: 0;
+}
+.anticon svg {
+  display: inline-block;
+  color: #e4e5e6;
+}
+.formula-img-mr {
+  margin: 10px 0px 20px 0px;
+  border: 1px solid #20a8d8;
+  padding: 10px;
+  border-radius: 5px;
+  filter: invert(1) brightness(2);
+}
+.formula-img-mr-showGuidance {
+  margin: 8px 0px -19px -34px;
+  border: 0px solid #fff;
+  padding: 10px;
+  border-radius: 5px;
+}
+.chart-wrapper canvas {
+  background-color: #e4e5e6; /* Dark background color */
+  padding: 10px;
+  margin-bottom: 20px;
+  // border-radius: 10px;
+}
+
+/* X-axis and Y-axis font color */
+.chart-wrapper .x-axis-label,
+.chart-wrapper .y-axis-label {
+  color: #e4e5e6;
+}
+
+/* Legend font color */
+.chart-wrapper .chart-legend {
+  color: #e4e5e6;
+  
+}
+
+.chart-title {
+  color: white;
+}
+
+.chart-legend {
+  color: white;
+}
+.chart-scales {
+  color: white;
+}
+.TableWidthCoumnBorder .DataEntryTable .table thead tr th {
+  position: sticky;
+  top: 0px !important;
+  padding: 6px 20px 5px 20px !important;
+  background: #212631;
+}
+.input-group-text {
+  display: flex;
+  align-items: center;
+  padding: 0.375rem 0.75rem;
+  margin-bottom: 0;
+  font-size: 0.875rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #5c6873;
+  text-align: center;
+  white-space: nowrap;
+  background-color: transparent;
+  border: 1px solid #e4e5e6;
+  border-radius: 0.25rem;
+}
+.versionColor {
+  color: #BA0C2F!important;
+  font-weight: 500;
+  font-size: 12px !important;
+}
+.modal-body table {
+  color: #e4e5e6 !important;
+  background: #23282c !important;
+  border: none!important;
+}
+.modal-body table h3{
+  color: #20a8d8!important;
+}
+.modal-body table td p {
+  color: #e4e5e6 !important;
+  // background: #1d222b !important;
+}
+.modal-body p {
+  color: #e4e5e6 !important;
+  // background: #1d222b !important;
+}
+.modal-body span {
+  color: #e4e5e6 !important;
+  // background: #1d222b !important;
+}
+.modal-body table td ul li {
+  color: #e4e5e6 !important;
+  // background: #1d222b !important;
+}
+.modal-body table td ol li {
+  color: #e4e5e6 !important;
+  // background: #1d222b !important;
+}
+.modal-body b {
+  color: #e4e5e6 !important;
+  // background: #1d222b !important;
+}
+.modal-body ul img {
+  filter: invert(1) brightness(2);
+}
+.ShowGuidanceHeading {
+  color: #20a8d8;
+  font-weight: 600;
+  font-size: 19px;
 }
 // .hoverTd {
 //   background-color: #e5e5e5;
