Changes for QAT-3648

--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -10858,3 +10858,9 @@ legend.scheduler-border {
   justify-content: flex-end;
   align-items: center;
 }
+
+.legendcommitversionTextStock {
+  text-align: left;
+  display: table;
+  padding: 0px 0px 0px 3px;
+}
