--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -18,7 +18,7 @@
 body {
   background-color: var(--background-color);
   color: var(--font-color);
-  font-size: 14px !important;
+  font-size: 0.775rem !important;
 }
 
 /* Dark Mode */
