--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -30,9 +30,9 @@ body {
     color: #e4e5e6 !important;
     text-align: justify;
 }
-.Select.is-searchable.is-focused.is-open > .Select-control{
-  background: #000!important;
-}
+// .Select.is-searchable.is-focused.is-open > .Select-control{
+//   background: #4d515a!important;
+// }
 .app-footer {
   display: flex;
   flex-wrap: wrap;
@@ -564,11 +564,11 @@ body{
 .rmsc {
   --rmsc-h: 27px !important;
   --rmsc-main: #8ad4ee !important;
-  --rmsc-hover: #000!important;
-  --rmsc-selected: #2a303d!important;
+  --rmsc-hover: #4d515a!important;
+  --rmsc-selected: #323a49!important;
   --rmsc-border: #e4e7ea !important;
   --rmsc-gray: #697069 !important;
-  --rmsc-bg: #212631!important;
+  --rmsc-bg: #2a303d!important;
   --rmsc-p: 10px;
   --rmsc-radius: 0.2rem !important;
   color: #e4e5e6 !important;
@@ -984,6 +984,60 @@ select>.Select-control .Select-value,
   font-size: 0.65625rem;
   background-color: #323a49;
   border-radius: 0.25rem;
+}
+
+.Select-menu-outer {
+  border-bottom-right-radius: 4px;
+  border-bottom-left-radius: 4px;
+  background-color: #4d515a!important;
+  border: 1px solid #212631;
+  border-top-color: #212631;
+  box-shadow: 0 1px 0 rgba(0, 0, 0, 0.06);
+  box-sizing: border-box;
+  margin-top: -1px;
+  max-height: 200px;
+  position: absolute;
+  left: 0;
+  top: 100%;
+  width: 100%;
+  z-index: 1;
+  -webkit-overflow-scrolling: touch;
+}
+.Select-menu {
+  max-height: 198px;
+  overflow-y: auto;
+}
+.Select-option {
+  box-sizing: border-box;
+  background-color: #2a303d!important;
+  color: #e4e5e6;
+  cursor: pointer;
+  display: block;
+  padding: 8px 10px;
+}
+.Select-option:last-child {
+  border-bottom-right-radius: 4px;
+  border-bottom-left-radius: 4px;
+}
+.Select-option.is-selected {
+  background-color:#2a303d!important;
+  /* Fallback color for IE 8 */
+  background-color: rgba(0, 126, 255, 0.04);
+  color: #e4e5e6;
+}
+.Select-option.is-focused {
+  background-color: #212631!important;
+  /* Fallback color for IE 8 */
+  background-color: rgba(0, 126, 255, 0.08);
+  color: #e4e5e6;
+}
+.Select-option.is-disabled {
+  color: #cccccc;
+  cursor: default;
+}
+.rmsc.dropdown-content{
+background-color: #2a303d!important;
+color: #fff!important;
 }
 // .Select-menu-outer{
 //   background-color: #000!important;
