Changes in notes cr as per comments in jira

--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -4183,7 +4183,9 @@ h6 {
 .ReportSearchMarginTop {
   margin-top: -51px;
 }
-
+.ReportSearchMarginTopSPVR{
+  margin-top: -42px;
+}
 .shipmentconsumptionSearchMarginTop {
   margin-top: -51px;
 
