--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -1090,6 +1090,10 @@ a {
 .WhiteText{
   color: #e4e5e6;
 }
+.compareAndSelectPU {
+  background-color: #e5e5e5 !important;
+  color: #000;
+}
 // .rmsc.dropdown-content{
 // background-color: #2a303d!important;
 // color: #fff!important;
