--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -16,7 +16,7 @@
 
 
 body {
-  background-color: var(--background-color);
+  background-color: var(--background-color)!important;
   color: var(--font-color);
   font-size: 0.775rem !important;
 }
@@ -557,7 +557,7 @@ legend.scheduler-border {
   color: #e4e5e6;
 }
 body{
-  background-color: #1d222b;
+  background-color: #1d222b!important;
   // font-size: 0.775rem !important;
 }
 .HelpdeskQATbg{
