commited by anisha

--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -1138,6 +1138,9 @@ a {
   background-color: #d3d3d3;
   color: #444;
 }
+.controls.edit.Blackcolortext label {
+  color: #000 !important;
+}
 
 // .month-picker > .rmp-container .rmp-popup.light .rmp-pad .rmp-btn.select {
 //   background-color: #d3d3d3;
