--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -10968,3 +10968,7 @@ legend.scheduler-border {
 .compareAndSelectPU {
   background-color: #e5e5e5 !important;
 }
+.jss>tfoot>tr>td:not(:nth-child(2)) {
+  border-left: 0px solid #ccc!important;
+  font-weight: bold;
+}
