--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -10939,14 +10939,17 @@ legend.scheduler-border {
 }
 
 .TreeTable .jss>thead>tr>td:nth-child(3) {
-  width: 150px !important;
+  width: 120px !important;
+  min-width: 120px;
+  cursor: unset !important;
   left: 0 !important;
   z-index: 4 !important;
   position: sticky !important;
 }
 
 .TreeTable .jss>tbody>tr>td:nth-child(3) {
-  width: 150px !important;
+  width: 120px !important;
+  min-width: 120px;
   left: 0 !important;
   z-index: 2 !important;
   position: sticky !important;
@@ -10954,29 +10957,35 @@ legend.scheduler-border {
 }
 
 .TreeTable .jss>thead>tr>td:nth-child(4) {
-  width: 150px !important;
-  left: 150px !important;
+  width: 120px !important;
+  min-width: 120px;
+  cursor: unset !important;
+  left: 110px !important;
   z-index: 4 !important;
   position: sticky !important;
 }
 
 .TreeTable .jss>tbody>tr>td:nth-child(4) {
-  width: 150px !important;
-  left: 150px !important;
+  width: 120px !important;
+  min-width: 120px;
+  left: 110px !important;
   position: sticky !important;
   // background: #fff;
 }
 
 .TreeTable .jss>thead>tr>td:nth-child(5) {
-  width: 150px !important;
-  left: 300px !important;
+  width: 120px !important;
+  min-width: 120px;
+  cursor: unset !important;
+  left: 220px !important;
   z-index: 4 !important;
   position: sticky !important;
 }
 
 .TreeTable .jss>tbody>tr>td:nth-child(5) {
-  width: 150px !important;
-  left: 300px !important;
+  width: 120px !important;
+  min-width: 120px;
+  left: 220px !important;
   z-index: 2 !important;
   position: sticky !important;
   background: #fff;
