--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -1373,6 +1373,18 @@ a {
   background-color: #e4e5e6;
   color: #212721;
 }
+.text-blackDModal{
+  color: #212721!important;
+}
+.text-blackDModal td span{
+  color: #212721!important;
+}
+.ModalTabletextClr .jss > tbody > tr > td{
+  color:#e4e5e6!important ;
+}
+.ModalTabletextClr .jss > tbody > tr > td.readonly{
+  color: #000!important;
+}
 // .month-picker > .rmp-container .rmp-popup.light .rmp-pad .rmp-btn.select {
 //   background-color: #d3d3d3;
 //   color: #000;
