commited by anisha

--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -1416,6 +1416,9 @@ a {
 .ModalTabletextClr .jss > tbody > tr > td.readonly{
   color: #000!important;
 }
+.textclrshipeditstatus span{
+  color:#e4e5e6!important ;
+}
 // .month-picker > .rmp-container .rmp-popup.light .rmp-pad .rmp-btn.select {
 //   background-color: #d3d3d3;
 //   color: #000;
