commited by anisha

--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -312,7 +312,7 @@ select>.Select-control .Select-value,
 }
 .Login-component .input-group > .form-control{
   background-color: transparent;
-  color: #e4e5e6;
+  color: #000;
 }
 @media (min-width: 992px) {
   .module2.sidebar .nav > .nav-dropdown > .nav-dropdown-items {
