commited by anisha

--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -1444,7 +1444,7 @@ body {
     margin: auto;
     padding: 0px !important;
     word-wrap: break-word;
-    background-color: #2a303d !important;
+    background-color: #2a303dd4 !important;
     background-clip: border-box;
     border: none !important;
     border-radius: 0.25rem;
