commited by anisha

--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -1117,10 +1117,10 @@ body {
     // background: #1d222b !important;
   }
 
-  .modal-body span {
-    color: #e4e5e6 !important;
-    // background: #1d222b !important;
-  }
+  // .modal-body span {
+  //   color: #e4e5e6 !important;
+    
+  // }
 
   .modal-body table td ul li {
     color: #e4e5e6 !important;
