--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -1265,7 +1265,7 @@ a {
 }
 .sidebar .nav-link {
   display: block;
-  padding: 0.75rem 1rem;
+  // padding: 0.75rem 1rem;
   color: #e4e5e6;
   text-decoration: none;
   background: transparent;
