Fixed bugs and hourglass changes

--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -8676,6 +8676,11 @@ legend.scheduler-border {
   height: 13px;
 }
 
+.AggregationDownwardNodeSize {
+  width: 20px;
+  height: 20px;
+}
+
 .ExtraCheckboxFieldWidth {
   // width: 115px;
   width: 129px;
