commited by anisha

--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -4586,7 +4586,7 @@ a:hover {
   .sidebar .nav-link {
     // padding: 0.75rem 0.2rem !important;
     // padding: 0.75rem 9px;
-    padding: 0.75rem 13px;
+    padding: -0.25rem 1rem;
   }
 
   .f-End {
