--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -9987,6 +9987,16 @@ legend.scheduler-border {
   right: 0px !important;
 }
 
+.TemplateTitleBgPurpleSingle {
+  background: #C3B1E1 !important;
+  border: none !important;
+  border-radius: 0px !important;
+  padding: 0px 0px 1px 0px !important;
+  top: 0px !important;
+  left: 0px !important;
+  right: 0px !important;
+}
+
 .jexcel>tbody>tr>td.readonly.commitShipmentAlreadyLinkedToOtherPro {
   background-color: yellow !important;
   color: #BA0C2F !important;
