--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -2223,7 +2223,7 @@ label.arrow_label:before {
 
   .sidebar .nav-link {
     display: block;
-    padding: 0.75rem 1rem;
+    // padding: 0.75rem 1rem;
     color: #e4e5e6;
     text-decoration: none;
     background: transparent;
@@ -3047,6 +3047,14 @@ label.arrow_label:before {
 }
 a:not([href]):not([tabindex]):hover, a:not([href]):not([tabindex]):focus {
   color: #e4e5e6;
+  text-decoration: none;
+}
+.jcontextmenu > div:hover {
+  /* background: #ebebeb; */
+  color: #555 !important;
+}
+.jcontextmenu > div a:not([href]):not([tabindex]):hover, a:not([href]):not([tabindex]):focus {
+  color: #555!important;
   text-decoration: none;
 }
 // .jss>thead>tr>td.InfoTrAsteriskTheadtrTdImageShipmentFreightCost::after {
@@ -4850,7 +4858,7 @@ a:hover {
   .sidebar .nav-link {
     // padding: 0.75rem 0.2rem !important;
     // padding: 0.75rem 9px;
-    padding: -0.25rem 1rem;
+    padding: -0.25rem 1rem!important;
   }
 
   .f-End {
@@ -16182,4 +16190,30 @@ label.arrow_label:before {
 .jss>tfoot>tr>td:not(:nth-child(2)) {
   border-left: 0px solid #ccc !important;
   font-weight: bold;
+}
+.MuiSwitch-colorPrimary.Mui-checked {
+    color: #23a8d8!important;
+}
+.MuiSwitch-colorPrimary.Mui-checked + .MuiSwitch-track {
+  background-color: #23a8d8!important;
+}
+.MuiSwitch-track {
+  width: 100%;
+  height: 100%;
+  opacity: 0.38;
+  z-index: -1;
+  transition: opacity 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms, background-color 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+  border-radius: 7px;
+  background-color: #23a8d8!important;
+}
+.MuiSwitch-switchBase {
+  top: 0;
+  left: 0;
+  color: #23a8d8!important;
+  z-index: 1;
+  position: absolute;
+  transition: left 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms, transform 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+}
+.jss > thead > tr > td.InfoTrAsteriskTheadtrTdImagePlanby::after {
+  right: 13px!important;
 }
