--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -8681,6 +8681,7 @@ legend.scheduler-border {
 .AggregationDownwardNodeSize {
   width: 20px;
   height: 20px;
+  margin-top: -2px;
 }
 
 .ExtraCheckboxFieldWidth {
