commited by anisha

--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -16217,3 +16217,6 @@ label.arrow_label:before {
 .jss > thead > tr > td.InfoTrAsteriskTheadtrTdImagePlanby::after {
   right: 13px!important;
 }
+.swichMarginLeft{
+  margin-left: 22px;
+}
